feat: Implement and display best seller badge for products with corresponding backend logic and localization.

--- a/mobile/lib/l10n/app_ar.arb
+++ b/mobile/lib/l10n/app_ar.arb
@@ -1,5 +1,9 @@
 {
   "@@locale": "ar",
+  "bestSeller": "أكثر مبيعاً",
+  "@bestSeller": {
+    "description": "Best Seller"
+  },
   "upsellMessage": "أضف {amount} المزيد للحصول على الخصم!",
   "@upsellMessage": {
     "placeholders": {
