--- a/src/Talabi.Api/Resources/OrderAssignmentResources.resx
+++ b/src/Talabi.Api/Resources/OrderAssignmentResources.resx
@@ -117,5 +117,8 @@
   <data name="OrderDeliveredHistoryNote" xml:space="preserve">
     <value>Order delivered by courier {0}</value>
   </data>
+  <data name="EarningDescription" xml:space="preserve">
+    <value>Delivery earning for order #{0}</value>
+  </data>
 </root>
 
