--- a/mobile/lib/l10n/app_tr.arb
+++ b/mobile/lib/l10n/app_tr.arb
@@ -3745,5 +3745,61 @@
   "viewOrder": "Siparişi Görüntüle",
   "transactionType": "İşlem Tipi",
   "referenceNo": "Referans No",
-  "dateLabel": "Tarih"
+  "dateLabel": "Tarih",
+  "amountToWithdraw": "Çekilecek Tutar",
+  "@amountToWithdraw": {
+    "description": "Label for amount to withdraw field"
+  },
+  "all": "Tümü",
+  "@all": {
+    "description": "Button text to fill entire balance"
+  },
+  "balance": "Bakiye",
+  "@balance": {
+    "description": "Label for current balance"
+  },
+  "savedAccounts": "Kayıtlı Hesaplar",
+  "@savedAccounts": {
+    "description": "Title for saved bank accounts section"
+  },
+  "addAccount": "Hesap Ekle",
+  "@addAccount": {
+    "description": "Button text to add a new bank account"
+  },
+  "accountName": "Hesap Adı",
+  "@accountName": {
+    "description": "Label for bank account name field"
+  },
+  "ibanOrAccountNumber": "IBAN veya Hesap Numarası",
+  "@ibanOrAccountNumber": {
+    "description": "Label for IBAN/Account Number field"
+  },
+  "deleteAccount": "Hesabı Sil",
+  "@deleteAccount": {
+    "description": "Button text/Title for deleting a bank account"
+  },
+  "areYouSure": "Emin misiniz?",
+  "@areYouSure": {
+    "description": "Confirmation message for destructive actions"
+  },
+  "editAccount": "Hesabı Düzenle",
+  "@editAccount": {
+    "description": "Button text/Title for editing a bank account"
+  },
+  "selectAccount": "Hesap Seçin",
+  "@selectAccount": {
+    "description": "Instruction to select a bank account"
+  },
+  "accountNameRequired": "Hesap adı gerekli",
+  "@accountNameRequired": {
+    "description": "Validation message for empty account name"
+  },
+  "ibanRequired": "IBAN/Hesap numarası gerekli",
+  "@ibanRequired": {
+    "description": "Validation message for empty IBAN field"
+  },
+  "noSavedAccounts": "Henüz kayıtlı hesap yok",
+  "@noSavedAccounts": {
+    "description": "Placeholder text when no bank accounts are saved"
+  }
 }
